--- a/app/src/main/res/layout/fragment_logging.xml
+++ b/app/src/main/res/layout/fragment_logging.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoggingFragment"
-    android:keepScreenOn="true">
+    android:keepScreenOn="true"
+    tools:context=".LoggingFragment">
 
     <ProgressBar
         android:id="@+id/progressBar3"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="400dp"
+        android:layout_width="200dp"
         android:layout_height="20dp"
         android:layout_marginEnd="8dp"
         android:max="100"
@@ -21,7 +21,7 @@
     <ProgressBar
         android:id="@+id/progressBar4"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="400dp"
+        android:layout_width="200dp"
         android:layout_height="20dp"
         android:layout_marginEnd="8dp"
         android:max="30"
@@ -32,7 +32,7 @@
     <ProgressBar
         android:id="@+id/progressBar5"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="400dp"
+        android:layout_width="200dp"
         android:layout_height="20dp"
         android:layout_marginEnd="8dp"
         android:max="60"
@@ -43,7 +43,7 @@
     <ProgressBar
         android:id="@+id/progressBar6"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="400dp"
+        android:layout_width="200dp"
         android:layout_height="20dp"
         android:layout_marginEnd="8dp"
         android:max="185000"
@@ -54,7 +54,7 @@
     <ProgressBar
         android:id="@+id/progressBar7"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="400dp"
+        android:layout_width="200dp"
         android:layout_height="20dp"
         android:layout_marginEnd="8dp"
         android:max="50"
@@ -65,7 +65,7 @@
     <ProgressBar
         android:id="@+id/progressBar2"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="400dp"
+        android:layout_width="200dp"
         android:layout_height="20dp"
         android:layout_marginEnd="8dp"
         android:max="2600"
@@ -89,7 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
-        android:text="@string/textPID1"
+        android:text="@string/textPID"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -99,7 +99,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="@string/textPID2"
+        android:text="@string/textPID"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID1" />
 
@@ -109,7 +109,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="@string/textPID3"
+        android:text="@string/textPID"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID2" />
 
@@ -119,7 +119,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="@string/textPID4"
+        android:text="@string/textPID"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID3" />
 
@@ -129,7 +129,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="@string/textPID5"
+        android:text="@string/textPID"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID4" />
 
@@ -139,7 +139,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="@string/textPID6"
+        android:text="@string/textPID"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID5" />
 
@@ -149,7 +149,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="@string/textPID7"
+        android:text="@string/textPID"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID6" />
 
@@ -159,7 +159,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="@string/textPID8"
+        android:text="@string/textPID"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID7" />
 
@@ -187,19 +187,28 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="@string/msg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID8" />
 
     <ProgressBar
         android:id="@+id/progressBar1"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="400dp"
+        android:layout_width="200dp"
         android:layout_height="20dp"
         android:layout_marginEnd="8dp"
         android:max="7000"
         android:progress="0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textViewPID1" />
+
+    <ProgressBar
+        android:id="@+id/progressBar8"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textViewPID8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
