--- a/app/src/main/res/layout-land/fragment_logging.xml
+++ b/app/src/main/res/layout-land/fragment_logging.xml
@@ -11,7 +11,7 @@
         android:id="@+id/progressBar3"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="450dp"
-        android:layout_height="25dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:max="100"
         android:progress="0"
@@ -23,7 +23,7 @@
         android:id="@+id/progressBar4"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="450dp"
-        android:layout_height="25dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:max="30"
         android:progress="0"
@@ -35,7 +35,7 @@
         android:id="@+id/progressBar5"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="450dp"
-        android:layout_height="25dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:max="60"
         android:progress="0"
@@ -47,7 +47,7 @@
         android:id="@+id/progressBar6"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="450dp"
-        android:layout_height="25dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:max="185000"
         android:progress="0"
@@ -59,7 +59,7 @@
         android:id="@+id/progressBar7"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="450dp"
-        android:layout_height="25dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:max="50"
         android:progress="0"
@@ -71,7 +71,7 @@
         android:id="@+id/progressBar2"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="450dp"
-        android:layout_height="25dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:max="2600"
         android:progress="0"
@@ -96,6 +96,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/textPID"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -106,6 +107,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/textPID"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID1" />
 
@@ -116,6 +118,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/textPID"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID2" />
 
@@ -126,6 +129,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/textPID"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID3" />
 
@@ -136,6 +140,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/textPID"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID4" />
 
@@ -146,6 +151,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/textPID"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID5" />
 
@@ -156,6 +162,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/textPID"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID6" />
 
@@ -166,6 +173,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/textPID"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID7" />
 
@@ -192,7 +200,7 @@
         android:id="@+id/progressBar1"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="450dp"
-        android:layout_height="25dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:max="7000"
         android:progress="0"
@@ -204,10 +212,90 @@
         android:id="@+id/progressBar8"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="450dp"
-        android:layout_height="25dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:scaleY="5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textViewPID8" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="729dp"
+        android:layout_height="6dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar7" />
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="729dp"
+        android:layout_height="6dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar8" />
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="729dp"
+        android:layout_height="6dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar6" />
+
+    <View
+        android:id="@+id/divider4"
+        android:layout_width="729dp"
+        android:layout_height="6dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar5" />
+
+    <View
+        android:id="@+id/divider5"
+        android:layout_width="729dp"
+        android:layout_height="6dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar4" />
+
+    <View
+        android:id="@+id/divider6"
+        android:layout_width="729dp"
+        android:layout_height="6dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar3" />
+
+    <View
+        android:id="@+id/divider7"
+        android:layout_width="729dp"
+        android:layout_height="6dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar2" />
+
+    <View
+        android:id="@+id/divider8"
+        android:layout_width="729dp"
+        android:layout_height="6dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar1"
+        app:layout_constraintVertical_bias="0.5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
