--- a/app/src/main/res/layout-land/fragment_logging.xml
+++ b/app/src/main/res/layout-land/fragment_logging.xml
@@ -11,7 +11,7 @@
     <ProgressBar
         android:id="@+id/progressBar3"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="450dp"
+        android:layout_width="400dp"
         android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:max="100"
@@ -23,7 +23,7 @@
     <ProgressBar
         android:id="@+id/progressBar4"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="450dp"
+        android:layout_width="400dp"
         android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:max="30"
@@ -35,7 +35,7 @@
     <ProgressBar
         android:id="@+id/progressBar5"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="450dp"
+        android:layout_width="400dp"
         android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:max="60"
@@ -47,7 +47,7 @@
     <ProgressBar
         android:id="@+id/progressBar6"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="450dp"
+        android:layout_width="400dp"
         android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:max="185000"
@@ -59,7 +59,7 @@
     <ProgressBar
         android:id="@+id/progressBar7"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="450dp"
+        android:layout_width="400dp"
         android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:max="50"
@@ -71,7 +71,7 @@
     <ProgressBar
         android:id="@+id/progressBar2"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="450dp"
+        android:layout_width="400dp"
         android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:max="2600"
@@ -85,7 +85,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="8dp"
         android:text="@string/back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -95,8 +94,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:text="@string/textPID"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -108,6 +107,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/textPID"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID1" />
@@ -119,6 +119,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/textPID"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID2" />
@@ -130,6 +131,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/textPID"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID3" />
@@ -141,6 +143,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/textPID"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID4" />
@@ -152,6 +155,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/textPID"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID5" />
@@ -163,6 +167,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/textPID"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID6" />
@@ -174,6 +179,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/textPID"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPID7" />
@@ -200,7 +206,7 @@
     <ProgressBar
         android:id="@+id/progressBar1"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="450dp"
+        android:layout_width="400dp"
         android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:max="7000"
@@ -212,7 +218,7 @@
     <ProgressBar
         android:id="@+id/progressBar8"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="450dp"
+        android:layout_width="400dp"
         android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:scaleY="5"
